--- a/src/examples/mini-demo-dna/HelloWorld/HelloWorld.csproj
+++ b/src/examples/mini-demo-dna/HelloWorld/HelloWorld.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <!-- <OutputType>Exe</OutputType> -->
+    <TargetFramework>net7</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
