--- a/src/examples/mini-demo-dna/HelloWorld/HelloWorld.csproj
+++ b/src/examples/mini-demo-dna/HelloWorld/HelloWorld.csproj
@@ -1,12 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <!-- <OutputType>Exe</OutputType> -->
-    <TargetFramework>net7</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <Optimize>true</Optimize>
+    <TargetFrameworks>net20</TargetFrameworks>
+    <VersionPrefix>2.0.0</VersionPrefix>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <!-- <NoStdLib>true</NoStdLib> -->
+    <!-- <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences> -->
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <FileAlignment>512</FileAlignment>
+    <WindowsForms>true</WindowsForms>
   </PropertyGroup>
 
 </Project>
