--- a/src/examples/mini-demo-dna/HelloWorld/CMakeLists.txt
+++ b/src/examples/mini-demo-dna/HelloWorld/CMakeLists.txt
@@ -1,3 +1,3 @@
 project(HelloWorld)
 
-add_dotnet_core_project("HelloWorld" "${CMAKE_CURRENT_LIST_DIR}")
+add_msbuild_project("HelloWorld" "${CMAKE_CURRENT_LIST_DIR}")
