--- a/src/examples/mini-demo-dna/HelloWorld/HelloWorld.csproj
+++ b/src/examples/mini-demo-dna/HelloWorld/HelloWorld.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <!-- <OutputType>Exe</OutputType> -->
+    <OutputType>Exe</OutputType>
     <TargetFrameworks>net20</TargetFrameworks>
     <VersionPrefix>2.0.0</VersionPrefix>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -13,6 +13,8 @@
     <WarningLevel>4</WarningLevel>
     <FileAlignment>512</FileAlignment>
     <WindowsForms>true</WindowsForms>
+    <Optimize>true</Optimize>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
 </Project>
